[tool.poetry]
name = "asparagus"
version = "0.1.0"
description = ""
authors = ["Shivelight <cwkfr@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
feedparser = {version = "^6.0.0-beta.1", allow-prereleases = true}
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
